--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -74,8 +74,8 @@
 
     </div>
 
-    <div class="container-img">
-      <img class="img-topic" src="./images/hero-product-ui.png" alt="Slack app screenshot" />
+    <div class="header-img">
+      <img class="logo-img" src="./images/hero-product-ui.png" alt="Slack app screenshot" />
     </div>
   </header>
 
@@ -94,7 +94,7 @@
 
     </section>
 
-    <section>
+    <section class="child-section-left">
       <div class="container-img">
         <img class="img-topic"  src="./images/connectedness-mobile.png" alt="connectedness" />
       </div>
@@ -113,7 +113,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="child-section">
       <div class="container-img">
         <img class="img-topic" src="./images/flexibility-mobile.png" alt="flexibility" />
       </div>
@@ -132,7 +132,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="child-section">
       <div class="container-img">
         <img class="img-topic"  src="./images/speed-mobile.png" alt="speed" />
       </div>
@@ -160,7 +160,7 @@
         <button class="cta-btn">TALK TO SALES</button>
       </div>
 
-      <ul class="list">
+      <ul class="list-cta">
         <li>
           <p class="p-li"><span>85%</span></p>
           <p class="desc-li">
@@ -235,7 +235,7 @@
     </div>
 
 
-    <ul class="lista">
+    <ul class="lista-row">
       <li class="title-li">Privacy</li>
       <li class="title-li">Status</li>
       <li class="title-li">Terms</li>
