--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -43,7 +43,7 @@
       </button>
 
       <button>
-        <img src="./images/icon-menu.png" alt="Menu icon">
+        <img class="btn-menu" src="./images/icon-menu.png" alt="Menu icon">
       </button>
 
       <ul hidden>
@@ -51,7 +51,7 @@
           <a href="#">Sign in</a>
         </li>
         <li>
-          <a href="#">Try for free</a>
+          <a class=" btn-try" href="#">Try for free</a>
         </li>
       </ul>
     </div>
@@ -94,7 +94,7 @@
 
     </section>
 
-    <section class="child-section-left">
+    <section class="child-section">
       <div class="container-img">
         <img class="img-topic"  src="./images/connectedness-mobile.png" alt="connectedness" />
       </div>
